// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for size: "medium", compact: false, open: false and sticky: false 1`] = `
":host {
  display: block;
  border-bottom: 1px solid var(--p-color-contrast-lower) !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap: 24px;
  cursor: pointer;
  z-index: 0;
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 20px 0;
}
button::before {
  content: "";
  z-index: -1;
  position: absolute;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  inset-inline: -4px;
  top: 6px;
  bottom: 6px;
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--p-color-frosted-soft);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font: inherit 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.collapsible {
  color: var(--p-color-primary);
  display: grid;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), visibility 0s linear var(--p-transition-duration, .25s);
}
.collapsible div {
  overflow: hidden;
  animation: none;
  padding: 4px;
  margin: -4px;
  transform: translate3d(0,0,0);
  z-index: 1;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() > should return correct css for size: "medium", compact: false, open: true and sticky: false 1`] = `
":host {
  display: block;
  border-bottom: 1px solid var(--p-color-contrast-lower) !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap: 24px;
  cursor: pointer;
  z-index: 0;
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 20px 0;
}
button::before {
  content: "";
  z-index: -1;
  position: absolute;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  inset-inline: -4px;
  top: 6px;
  bottom: 6px;
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--p-color-frosted-soft);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font: inherit 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.collapsible {
  color: var(--p-color-primary);
  display: grid;
  grid-template-rows: 1fr;
  visibility: inherit;
  transition: grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding-bottom: 24px;
}
.collapsible div {
  overflow: visible;
  animation: keyframes-overflow var(--p-transition-duration,.25s);
  padding: 4px;
  margin: -4px;
  transform: translate3d(0,0,0);
  z-index: 1;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() > should return correct css for size: "medium", compact: true, open: false and sticky: false 1`] = `
":host {
  display: block;
  transform: translate3d(0,0,0) !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap: 24px;
  cursor: pointer;
  z-index: 0;
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 4px 0;
}
button::before {
  content: "";
  z-index: -1;
  position: absolute;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  inset-inline: -4px;
  top: 2px;
  bottom: 2px;
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--p-color-frosted-soft);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font: inherit 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.collapsible {
  color: var(--p-color-primary);
  display: grid;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), visibility 0s linear var(--p-transition-duration, .25s);
}
.collapsible div {
  overflow: hidden;
  animation: none;
  padding: 4px;
  margin: -4px;
  transform: translate3d(0,0,0);
  z-index: 1;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() > should return correct css for size: "medium", compact: true, open: false and sticky: false 2`] = `
":host {
  display: block;
  transform: translate3d(0,0,0) !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap: 24px;
  cursor: pointer;
  z-index: 0;
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 4px 0;
}
button::before {
  content: "";
  z-index: -1;
  position: absolute;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  inset-inline: -4px;
  top: 2px;
  bottom: 2px;
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--p-color-frosted-soft);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font: inherit 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.collapsible {
  color: var(--p-color-primary);
  display: grid;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), visibility 0s linear var(--p-transition-duration, .25s);
}
.collapsible div {
  overflow: hidden;
  animation: none;
  padding: 4px;
  margin: -4px;
  transform: translate3d(0,0,0);
  z-index: 1;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() > should return correct css for size: "medium", compact: true, open: false and sticky: true 1`] = `
":host {
  display: block;
  transform: translate3d(0,0,0) !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap: 24px;
  cursor: pointer;
  z-index: 0;
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 4px 0;
}
button::before {
  content: "";
  z-index: -1;
  position: absolute;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  inset-inline: -4px;
  top: 2px;
  bottom: 2px;
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--p-color-frosted-soft);
  }
}

.heading {
  margin: 0;
  position: sticky;
  top: var(--p-accordion-position-sticky-top, 0);
  z-index: 1;
  background: var(--p-color-canvas);
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font: inherit 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.collapsible {
  color: var(--p-color-primary);
  display: grid;
  position: relative;
  z-index: 0;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), visibility 0s linear var(--p-transition-duration, .25s);
}
.collapsible div {
  overflow: hidden;
  animation: none;
  padding: 4px;
  margin: -4px;
  transform: translate3d(0,0,0);
  z-index: 1;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() > should return correct css for size: "medium", compact: true, open: false and sticky: true 2`] = `
":host {
  display: block;
  transform: translate3d(0,0,0) !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap: 24px;
  cursor: pointer;
  z-index: 0;
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 4px 0;
}
button::before {
  content: "";
  z-index: -1;
  position: absolute;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  inset-inline: -4px;
  top: 2px;
  bottom: 2px;
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--p-color-frosted-soft);
  }
}

.heading {
  margin: 0;
  position: sticky;
  top: var(--p-accordion-position-sticky-top, 0);
  z-index: 1;
  background: var(--p-color-canvas);
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font: inherit 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.collapsible {
  color: var(--p-color-primary);
  display: grid;
  position: relative;
  z-index: 0;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), visibility 0s linear var(--p-transition-duration, .25s);
}
.collapsible div {
  overflow: hidden;
  animation: none;
  padding: 4px;
  margin: -4px;
  transform: translate3d(0,0,0);
  z-index: 1;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() > should return correct css for size: "medium", compact: true, open: true and sticky: false 1`] = `
":host {
  display: block;
  transform: translate3d(0,0,0) !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap: 24px;
  cursor: pointer;
  z-index: 0;
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 4px 0;
}
button::before {
  content: "";
  z-index: -1;
  position: absolute;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  inset-inline: -4px;
  top: 2px;
  bottom: 2px;
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--p-color-frosted-soft);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font: inherit 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.collapsible {
  color: var(--p-color-primary);
  display: grid;
  grid-template-rows: 1fr;
  visibility: inherit;
  transition: grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding-bottom: 8px;
}
.collapsible div {
  overflow: visible;
  animation: keyframes-overflow var(--p-transition-duration,.25s);
  padding: 4px;
  margin: -4px;
  transform: translate3d(0,0,0);
  z-index: 1;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() > should return correct css for size: "small", compact: false, open: false and sticky: false 1`] = `
":host {
  display: block;
  border-bottom: 1px solid var(--p-color-contrast-lower) !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap: 24px;
  cursor: pointer;
  z-index: 0;
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  font-weight: 600;
  font-size: 1rem;
  padding: 15px 0;
}
button::before {
  content: "";
  z-index: -1;
  position: absolute;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  inset-inline: -4px;
  top: 6px;
  bottom: 6px;
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--p-color-frosted-soft);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font: inherit 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.collapsible {
  color: var(--p-color-primary);
  display: grid;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), visibility 0s linear var(--p-transition-duration, .25s);
}
.collapsible div {
  overflow: hidden;
  animation: none;
  padding: 4px;
  margin: -4px;
  transform: translate3d(0,0,0);
  z-index: 1;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() > should return correct css for size: "small", compact: false, open: true and sticky: false 1`] = `
":host {
  display: block;
  border-bottom: 1px solid var(--p-color-contrast-lower) !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap: 24px;
  cursor: pointer;
  z-index: 0;
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  font-weight: 600;
  font-size: 1rem;
  padding: 15px 0;
}
button::before {
  content: "";
  z-index: -1;
  position: absolute;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  inset-inline: -4px;
  top: 6px;
  bottom: 6px;
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--p-color-frosted-soft);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font: inherit 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.collapsible {
  color: var(--p-color-primary);
  display: grid;
  grid-template-rows: 1fr;
  visibility: inherit;
  transition: grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding-bottom: 24px;
}
.collapsible div {
  overflow: visible;
  animation: keyframes-overflow var(--p-transition-duration,.25s);
  padding: 4px;
  margin: -4px;
  transform: translate3d(0,0,0);
  z-index: 1;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() > should return correct css for size: "small", compact: false, open: true and sticky: false 2`] = `
":host {
  display: block;
  border-bottom: 1px solid var(--p-color-contrast-lower) !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap: 24px;
  cursor: pointer;
  z-index: 0;
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  font-weight: 600;
  font-size: 1rem;
  padding: 15px 0;
}
button::before {
  content: "";
  z-index: -1;
  position: absolute;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  inset-inline: -4px;
  top: 6px;
  bottom: 6px;
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--p-color-frosted-soft);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font: inherit 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.collapsible {
  color: var(--p-color-primary);
  display: grid;
  grid-template-rows: 1fr;
  visibility: inherit;
  transition: grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding-bottom: 24px;
}
.collapsible div {
  overflow: visible;
  animation: keyframes-overflow var(--p-transition-duration,.25s);
  padding: 4px;
  margin: -4px;
  transform: translate3d(0,0,0);
  z-index: 1;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() > should return correct css for size: "small", compact: true, open: false and sticky: false 1`] = `
":host {
  display: block;
  transform: translate3d(0,0,0) !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap: 24px;
  cursor: pointer;
  z-index: 0;
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  font-weight: 600;
  font-size: 1rem;
  padding: 4px 0;
}
button::before {
  content: "";
  z-index: -1;
  position: absolute;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  inset-inline: -4px;
  top: 2px;
  bottom: 2px;
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--p-color-frosted-soft);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font: inherit 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.collapsible {
  color: var(--p-color-primary);
  display: grid;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), visibility 0s linear var(--p-transition-duration, .25s);
}
.collapsible div {
  overflow: hidden;
  animation: none;
  padding: 4px;
  margin: -4px;
  transform: translate3d(0,0,0);
  z-index: 1;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() > should return correct css for size: "small", compact: true, open: true and sticky: false 1`] = `
":host {
  display: block;
  transform: translate3d(0,0,0) !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap: 24px;
  cursor: pointer;
  z-index: 0;
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  font-weight: 600;
  font-size: 1rem;
  padding: 4px 0;
}
button::before {
  content: "";
  z-index: -1;
  position: absolute;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  inset-inline: -4px;
  top: 2px;
  bottom: 2px;
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--p-color-frosted-soft);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font: inherit 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.collapsible {
  color: var(--p-color-primary);
  display: grid;
  grid-template-rows: 1fr;
  visibility: inherit;
  transition: grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding-bottom: 8px;
}
.collapsible div {
  overflow: visible;
  animation: keyframes-overflow var(--p-transition-duration,.25s);
  padding: 4px;
  margin: -4px;
  transform: translate3d(0,0,0);
  z-index: 1;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() > should return correct css for size: {"base":"small","xs":"medium","s":"small","m":"medium","l":"small","xl":"medium"}, compact: false, open: true and sticky: false 1`] = `
":host {
  display: block;
  border-bottom: 1px solid var(--p-color-contrast-lower) !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap: 24px;
  cursor: pointer;
  z-index: 0;
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  font-weight: 600;
  font-size: 1rem;
  padding: 15px 0;
}
button::before {
  content: "";
  z-index: -1;
  position: absolute;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  inset-inline: -4px;
  top: 6px;
  bottom: 6px;
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media(min-width:480px) {
  button {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    padding: 20px 0;
  }
}

@media(min-width:760px) {
  button {
    font-size: 1rem;
    padding: 15px 0;
  }
}

@media(min-width:1000px) {
  button {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    padding: 20px 0;
  }
}

@media(min-width:1300px) {
  button {
    font-size: 1rem;
    padding: 15px 0;
  }
}

@media(min-width:1760px) {
  button {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    padding: 20px 0;
  }
}

@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--p-color-frosted-soft);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font: inherit 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.collapsible {
  color: var(--p-color-primary);
  display: grid;
  grid-template-rows: 1fr;
  visibility: inherit;
  transition: grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding-bottom: 24px;
}
.collapsible div {
  overflow: visible;
  animation: keyframes-overflow var(--p-transition-duration,.25s);
  padding: 4px;
  margin: -4px;
  transform: translate3d(0,0,0);
  z-index: 1;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;
